--- a/lib/clibs/linux64/README
+++ b/lib/clibs/linux64/README
@@ -1,20 +1,5 @@
-These shared libraries were built using
+The shared library is built with wrapper.cpp in the following environment,
 
-Epics Base 3.16.2 on Centos 6.9 with gcc 4.4.7, glibc 2.12
-
-Readline support was turned off by setting
-   COMMANDLINE_LIBRARY =
-
-in
-   CONFIG_SITE.Common.linux-x86
-
-
-The patchelf utility (from Anaconda Python) was used to make the shared
-libraries portable with the following commands:
-
-  mv libCom.so libComPYEPICS.so
-  patchelf --set-soname libca.so libca.so
-  patchelf --set-soname libComPYEPICS.so libComPYEPICS.so
-  patchelf --set-rpath '$ORIGIN' libca.so
-  patchelf --set-rpath '$ORIGIN' libComPYEPICS.so
-  patchelf --replace-needed libCom.so.3.16.2 libComPYEPICS.so libca.so
+* Debian Linux 10 (buster), x86_64
+* EPICS base 7.0.7
+* PVXS 1.2.0
